syntax = "proto3";
package worker;

service Worker {
  rpc StartJob(JobSubmission) returns (StartJobResult) {}
  rpc StopJob(JobId) returns (Result) {}
  rpc QueryStatus(JobId) returns (StatusResult) {}
  rpc FetchOutput(JobId) returns (stream JobOutput) {}
}

message JobSubmission {
  string executable = 1;
  repeated string arguments = 2;
}

message StartJobResult {
  oneof result {
    string id = 1;
    string error = 2;
  }
}

message JobId {
  string id = 1;
}

message Result {
  string error = 1;
}

message StatusResult {
  message Running {}
  message Exited {
    int32 exit_status = 1;
  }
  message Stopped {}
 
  oneof result {
    Running running = 1;
    Exited exited = 2;
    Stopped stopped = 3;
  }
}

message JobOutput {
  oneof output_type {
    bytes stdout = 1;
    bytes stderr = 2;
  }
}
